13753 svr4pkg: variable may be used uninitialized Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>